--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -38,7 +38,15 @@
     width: 240px;
     /* background-color: aquamarine; */
     text-align: left;
+}
 
+.error {
+    font-size: 12px;
+    font-weight: 500;
+    color: red;
+    width: 230px;
+    text-align: left;
+    margin: 5px;
 }
 
 @media screen and (max-width: 850px) {
