--- a/src/components/PlotsList.css
+++ b/src/components/PlotsList.css
@@ -1,6 +1,6 @@
 .PlotsList {
-    margin-top: 60px;
-    height: 100vh;
+    margin-top: 57px;
+    /* height: 100vh; */
     display: flex;
     width: 100vw;
    justify-content: center;
