--- a/src/components/PlotCard.css
+++ b/src/components/PlotCard.css
@@ -3,16 +3,17 @@
     /* height: 300px; */
     background-color: #20232a;
     color:white;
-    position: flex;
-    overflow: hidden;
-    padding: 0;
+    /* position: flex; */
+    /* overflow: hidden; */
+    padding: 12px 0px;
     margin: 0;
     outline: none;
     box-sizing: border-box;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin: 0.4px 5px;
-    border-radius: 3px;
+    margin: 0px 0px;
+    border-radius: 1px;
     /* flex-direction: row; */
+    /* height: 40px; */
 
 }
 
@@ -22,10 +23,12 @@
     /* justify-content: center; */
     align-items: center;
     justify-content: space-between;
+    align-items: center;
     /* margin: 20px; */
     flex-direction: row;
     width: 100%;
     height: 100%;
+    /* margin: 10px 0px; */
     
 }
 
@@ -43,8 +46,8 @@
 
 .plotNumberBody{
     background-color: rgb(255, 213, 0);
-    height: 50px;
-    width: 50px;
+    height: 47px;
+    width: 47px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,7 +62,7 @@
    
 }
 .PlotElementHeading{
-    font-size: 2px;
+    font-size: 13px;
     letter-spacing: 0.8px;
     /* text-transform: uppercase; */
     /* text-align: left; */
@@ -81,7 +84,7 @@
    
 }
 .PlotStatusElementHeading{
-    font-size: 2px;
+    font-size: 13px;
     letter-spacing: 0.8px;
     /* text-transform: uppercase; */
     /* text-align: left; */
@@ -115,13 +118,15 @@
     height: 10px;
     /* padding: auto;   */
     padding: 0px 5px;
-    height: 40px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 1px;
     margin: 0px 20px;
     float: right;
+    font-size: 13px;
+    border-radius: 3px;
 
     
 }
