--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -5,14 +5,16 @@
   }
 
   .loader-wrapper {
+
     width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    /* background-color: #000000; */
+    background-color: #000000;
     display: grid;
     place-items: center;
+   z-index: -99999;
     
   }
 
