--- a/src/components/PlotsList.css
+++ b/src/components/PlotsList.css
@@ -1,5 +1,5 @@
 .PlotsList {
-    margin-top: 56px;
+    margin-top: 90px;
     /* height: 100vh; */
     display: flex;
     width: 100vw;
@@ -17,4 +17,9 @@
     flex-wrap: wrap;
     justify-content: center;
    height: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+    .PlotsList {
+        margin-top: 56px;}
 }
