--- a/src/components/PlotsList.css
+++ b/src/components/PlotsList.css
@@ -1,5 +1,5 @@
 .PlotsList {
-    margin-top: 90px;
+    margin-top: 160px;
     /* height: 100vh; */
     display: flex;
     width: 100vw;
@@ -19,7 +19,38 @@
    height: 100%;
 }
 
+input {
+    max-width: 1000px;
+    width: 100%;
+    padding: 8px 20px;
+    /* margin: 8px 0; */
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    /* margin: 10px; */
+    /* margin: 15px; */
+    border-radius: 60px;
+   
+   
+   
+    }
+
+ .search {
+    position: fixed;
+    background-color: #000000;
+    width: 100vw;
+    z-index: 1;
+    top: 83px;
+    left: 0px;
+    padding: 20px 0px;
+ }   
+
 @media only screen and (max-width: 768px) {
     .PlotsList {
-        margin-top: 56px;}
+        margin-top: 130px;}
+  .search {
+    top: 50px;
+  }
+       
+        
 }
