--- a/src/components/PlotsList.css
+++ b/src/components/PlotsList.css
@@ -1,5 +1,5 @@
 .PlotsList {
-    margin-top: 150px;
+    margin-top: 153px;
     /* height: 100vh; */
     display: flex;
     width: 100vw;
@@ -39,17 +39,18 @@ input {
     position: fixed;
     background-color: #000000;
     width: 100vw;
-    z-index: 30;
-    top: 83px;
+    z-index: 1;
+    top: 86px;
     left: 0px;
     padding: 15px 0px;
  }   
 
 @media only screen and (max-width: 768px) {
     .PlotsList {
-        margin-top: 115px;}
+        margin-top: 119px;
+    }
   .search {
-    top: 50px;
+    top: 56px;
   }
        
         
