--- a/src/components/PlotCard.css
+++ b/src/components/PlotCard.css
@@ -54,6 +54,7 @@
     color: black;
     border-radius: 50%;
     margin: 0px 20px;
+    font-weight: bold;
 }
 
 .plotElement{
@@ -74,6 +75,7 @@
     /* text-transform: uppercase; */
     /* text-align: left; */
     color: #ffd56d;
+   
 }
 
 .plotStausElement{
@@ -88,6 +90,7 @@
     letter-spacing: 0.8px;
     /* text-transform: uppercase; */
     /* text-align: left; */
+
    
 }
 
@@ -97,6 +100,7 @@
     /* text-transform: uppercase; */
     /* text-align: left; */
     color: #ffd56d;
+    text-align: left;
 }
 
 .sold{
