--- a/src/components/PlotsList.css
+++ b/src/components/PlotsList.css
@@ -37,6 +37,24 @@ input {
    
     }
 
+    
+input:focus  {
+  max-width: 1000px;
+  width: 100%;
+  /* padding: 8px 20px; */
+  /* margin: 8px 0; */
+  /* display: inline-block; */
+  /* border: 1px solid #ccc; */
+  /* box-sizing: border-box; */
+  /* margin: 10px; */
+  /* margin: 15px; */
+  border-radius: 0px;
+  height: calc(100% - 6px);
+  outline: none;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  }
+
  .search {
     position: fixed;
     background-color: #000000;
@@ -44,7 +62,11 @@ input {
     z-index: 1;
     top: 90px;
     left: 0px;
-    padding: 15px 0px;
+    height: 60px;
+    /* padding: 15px 0px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
  }   
 
 @media only screen and (max-width: 768px) {
