--- a/src/components/PlotCard.css
+++ b/src/components/PlotCard.css
@@ -14,7 +14,7 @@
     border-radius: 1px;
     /* flex-direction: row; */
     /* height: 40px; */
-    margin: 0.5px 2px;
+    margin: 0px 2px;
 
 }
 
@@ -49,7 +49,7 @@
 
 .plotNumberBody{
     /* background-color: rgb(146, 122, 0); */
-    background-color:rgb(234, 180, 16);
+    background-color:rgb(255, 230, 0);
    
     height: calc(100% - 20px);
     aspect-ratio: 1/1;
@@ -120,7 +120,7 @@
 
 .requestButton {
     
-    background: #050e21;
+    background: #28488d;
     color: #fff;
     border: 0;
     cursor: pointer;
