--- a/src/components/PlotCard.css
+++ b/src/components/PlotCard.css
@@ -50,8 +50,8 @@
 .plotNumberBody{
     /* background-color: rgb(146, 122, 0); */
     background-color:rgb(255, 230, 0);
-   
-    height: calc(100% - 20px);
+    background-color:  #ffffff;
+    height: calc(100% - 25px);
     aspect-ratio: 1/1;
     display: flex;
     align-items: center;
@@ -61,6 +61,7 @@
     /* margin-right: 2px yellow; */
     border-right: 2px solid rgb(255, 213, 0);
     border-radius: 50%;
+    font-size: 15px;
 }
 
 .plotElement{
@@ -101,30 +102,32 @@
 }
 
 .PlotStatusElementBody{
-    font-size: 1rem;
+    font-size: 14px;
     letter-spacing: 0.8px;
-    /* text-transform: uppercase; */
-    /* text-align: left; */
     color: #ffd56d;
     text-align: left;
-    /* letter-spacing: 2px; */
+    font-weight: 100;
+    letter-spacing: 1px;
+
 }
 
 .sold{
     color: red;
+  
 }
 
 .available{
     color: rgb(0, 255, 0);
+ 
 }
 
 .requestButton {
     
-    background: #28488d;
-    color: #fff;
+    background: #1DA1F2;
+    /* background-color: white; */
+    color: rgb(255, 255, 255);
     border: 0;
     cursor: pointer;
-    width: 20%;    
     height: 10px;
     padding: 0px 5px;
     height: 30px;
@@ -133,7 +136,7 @@
     align-items: center;
     margin: 0px 20px;
     float: right;
-    font-size: 13px;
+    font-size: 12px;
 
 
 
@@ -153,6 +156,7 @@
   align-items: center;
   border-radius: 60px;
   letter-spacing: 1px;
+  font-weight: 600;
 
 
 }
