--- a/src/components/PlotsList.css
+++ b/src/components/PlotsList.css
@@ -32,22 +32,21 @@ input {
     /* margin: 10px; */
     /* margin: 15px; */
     border-radius: 60px;
-   
-   
-   
+
+    max-width: 1000px;
+  width: 100%;
+  border-radius: 0px;
+  height: calc(100% - 6px);
+  outline: none;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  
     }
 
     
 input:focus  {
   max-width: 1000px;
   width: 100%;
-  /* padding: 8px 20px; */
-  /* margin: 8px 0; */
-  /* display: inline-block; */
-  /* border: 1px solid #ccc; */
-  /* box-sizing: border-box; */
-  /* margin: 10px; */
-  /* margin: 15px; */
   border-radius: 0px;
   height: calc(100% - 6px);
   outline: none;
