--- a/src/components/PlotCard.css
+++ b/src/components/PlotCard.css
@@ -14,7 +14,8 @@
     border-radius: 1px;
     /* flex-direction: row; */
     /* height: 40px; */
-    margin: 0.5px 2px;
+    margin: 1px 2px;
+ 
 
 }
 
@@ -44,6 +45,7 @@
     /* border-radius: 50%; */
     height: 100%;
     width: 20%;
+    border-right: 3px solid yellow
     
 }
 
@@ -58,9 +60,10 @@
     justify-content: center;
     color: rgb(0, 0, 0);
     font-weight: bold;
+    border-radius: 2px;
     /* margin-right: 2px yellow; */
    
-    border-radius: 50%;
+    /* border-radius: 50%; */
     font-size: 15px;
 }
 
@@ -125,7 +128,7 @@
     
     background: #1DA1F2;
     /* background-color: white; */
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     border: 0;
     cursor: pointer;
     height: 10px;
