--- a/src/components/PlotCard.css
+++ b/src/components/PlotCard.css
@@ -51,14 +51,14 @@
 
 .plotNumberBody{
     /* background-color: rgb(146, 122, 0); */
-    background-color:rgb(255, 230, 0);
-    background-color:  #ffffff;
+    /* background-color:rgb(255, 230, 0);
+    background-color:  #ffffff; */
     height: calc(100% - 25px);
     aspect-ratio: 1/1;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-weight: bold;
     border-radius: 2px;
     /* margin-right: 2px yellow; */
