--- a/src/components/RequestCard.css
+++ b/src/components/RequestCard.css
@@ -27,7 +27,7 @@
 
 .RequestPlotNumber{
     height: 100%;
-    width:20%;
+    width:10%;
     display: flex;
     align-items: center;
     justify-content: left;
@@ -57,6 +57,7 @@
     flex-direction: column;
     justify-content:flex-start;
     align-items: flex-start;
+    overflow: hidden;
    
 }
 
@@ -71,6 +72,15 @@
 
 }
 
+.Delete{
+    width: 10%;
+    cursor: pointer;
+    margin: 0px 10px;
+    /* background-color: forestgreen; */
+}
+.DeleteBody {
+    width: 20px;
+}
 .sold{
     color: red;
 }
