--- a/src/components/RequestCard.css
+++ b/src/components/RequestCard.css
@@ -27,7 +27,7 @@
 
 .RequestPlotNumber{
     height: 100%;
-    width:10%;
+    width:20%;
     display: flex;
     align-items: center;
     justify-content: left;
@@ -52,7 +52,7 @@
 }
 
 .RequestData{
-    width: 80%;
+    width: 75%;
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
@@ -73,10 +73,10 @@
 }
 
 .Delete{
-    width: 10%;
+    width: 5%;
     cursor: pointer;
     margin: 0px 10px;
-    /* background-color: forestgreen; */
+    background-color: forestgreen;
 }
 .DeleteBody {
     width: 20px;
