--- a/src/components/RequestCard.css
+++ b/src/components/RequestCard.css
@@ -76,7 +76,7 @@
     width: 5%;
     cursor: pointer;
     margin: 0px 10px;
-    background-color: forestgreen;
+    /* background-color: forestgreen; */
 }
 .DeleteBody {
     width: 20px;
