--- a/src/components/PlotCard.css
+++ b/src/components/PlotCard.css
@@ -44,7 +44,7 @@
     color: black;
     /* border-radius: 50%; */
     height: 100%;
-    width: 20%;
+    width: 25%;
     border-right: 3px solid yellow
     
 }
@@ -69,7 +69,8 @@
 
 
 .plotStausElement{
-    width: 60%;
+    width: 30%;
+    /* background-color: red; */
 }
 
 .PlotStatusElementBody{
@@ -79,7 +80,7 @@
     text-align: left;
     font-weight: 100;
     letter-spacing: 1px;
-    margin: 0px 20px;
+    margin: 0px 10px;
 
 }
 
@@ -93,13 +94,13 @@
  
 }
 
+
   .switch {
     position: relative;
     display: inline-block;
     width: 10%;
-    /* height: 30px; */
-    margin: 0px 30px;
-   
+    /* background-color: red; */
+    margin: 0px 5px;
   }
   
   .switch input {
@@ -165,15 +166,15 @@
 
   .Pen {
     width: 10%;
-    margin: 0px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     /* background-color: red; */
-     
+    margin: 0px 5px; 
   }
 
   .PenBody {
+    /* margin: 0px 20px; */
     width: 24px;
    height: 24px;
      
