--- a/src/components/PlotsCardForm.css
+++ b/src/components/PlotsCardForm.css
@@ -1,12 +1,28 @@
 .PlotCardForm {
-   
-    height: 240px;
+    /* position: relative; */
+    height: 270px;
     display: flex;
     width: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: black;
+    /* margin-bottom: 10px; */
+    animation: appear 0.5s ;
+    transition: all 0.5s;
+    z-index: -999;
+    overflow: hidden ;
+   /* border-left: 2px #1DA1F2 solid; */
+    border-right: 0.1px#1DA1F2 solid;
+   
+   
+ /*  border-bottom: 2px#1DA1F2 solid; */
+   
+}
+
+@keyframes appear {
+   from{ opacity: 0; height: 0px; }
+   tp{ opacity: 1; height: 270px;}
 }
 form {
 
@@ -15,14 +31,35 @@ form {
     /* margin-top: 100px; */
 }
 
+
+ .Loading {
+    border: 2px solid  #1DA1F2;
+    border-top: 2px solid rgb(0, 0, 0);
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 .PlotCardFormInput {
     width: 100%;
     border-radius: 2px;
     margin: 0px;
-    height: 33.6px;
+    height: 33.8px;
     margin: 3px 0px;
-    background-color: rgb(0, 0, 0);
-    color : white
+    background-color: rgb(37, 36, 45); 
+     color : white;
+     /* outline: none; */
+     border: 1px solid  rgba(29, 160, 242, 0);
 }
 
 /* input {
@@ -72,7 +109,7 @@ input {
     border: 1px solid #ccc;
     box-sizing: border-box;
     /* margin: 10px; */
-    margin-top: 15px;
+    /* margin-top: 15px; */
     }
     
 
@@ -90,12 +127,12 @@ input {
   border: 0px solid #1A1A1A;
   border-radius: 2px;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #000000;
   cursor: pointer;
   display: inline-block;
   font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   font-size: 16px;
-  font-weight: 600;
+  /* font-weight: 600; */
   line-height: normal;
   margin: 0;
   outline: none;
@@ -144,7 +181,7 @@ input {
   display: inline-block;
   font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
   font-size: 16px;
-  font-weight: 600;
+  /* font-weight: 500; */
   line-height: 20px;
   margin: 0;
   outline: none;
