--- a/src/components/PlotsCardForm.css
+++ b/src/components/PlotsCardForm.css
@@ -1,5 +1,4 @@
 .PlotCardForm {
-    /* position: relative; */
     height: 270px;
     display: flex;
     width: 100%;
@@ -7,23 +6,22 @@
     align-items: center;
     flex-direction: column;
     background-color: black;
-    /* margin-bottom: 10px; */
-    animation: appear 0.5s ;
-    transition: all 0.5s;
+    transition: all ease-out;
     z-index: -999;
     overflow: hidden ;
-   /* border-left: 2px #1DA1F2 solid; */
     border-right: 0.1px#1DA1F2 solid;
-   
-   
- /*  border-bottom: 2px#1DA1F2 solid; */
-   
+    animation: slideDown 0.2s  ease-in-out ;
 }
 
-@keyframes appear {
-   from{ opacity: 0; height: 0px; }
-   tp{ opacity: 1; height: 270px;}
-}
+@keyframes slideDown {
+    from {
+      height: 0;
+    }
+    to {
+      height: 270px;
+    }
+  }
+
 form {
 
     width: calc(100% - 40px);
