--- a/src/components/RequestCard.css
+++ b/src/components/RequestCard.css
@@ -33,7 +33,7 @@
     justify-content: left;
     color: black;
     /* border-radius: 50%; */
-    border-right: 3px solid rgb(167, 10, 10);
+    border-right: 3px solid  #2196F3;
     
 }
 
